@@ -6,7 +6,7 @@
 
     <groupId>edp.wormhole</groupId>
     <artifactId>wormhole-parent</artifactId>
-    <version>0.3.0-SNAPSHOTS</version>
+    <version>0.4.0-SNAPSHOTS</version>
     <packaging>pom</packaging>
 
     <licenses>
@@ -25,16 +25,22 @@
         <module>common/util</module>
         <module>common/zookeeper</module>
         <module>common/dbpool</module>
+        <!--<module>common/phoenix-jdbc</module>-->
+        <module>common/sql4es5</module>
+        <module>common/sql4es2</module>
+        <module>common/redispool</module>
         <module>common/hadoop</module>
         <module>sparkx</module>
+        <module>rider/common/haservice</module>
         <module>rider/rider-server</module>
+        <module>rider/mad-server</module>
         <module>rider/rider-assembly</module>
     </modules>
 
     <properties>
         <main.basedir>${project.basedir}</main.basedir>
         <ums.version>1.3</ums.version>
-        <project.version>0.3.0-SNAPSHOTS</project.version>
+        <project.version>0.4.0-SNAPSHOTS</project.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
@@ -320,7 +326,7 @@
                     <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                     <junitxml>.</junitxml>
                     <filereports>EDPTestSuite.txt</filereports>
-                    <argLine>-Xms512M -Xmx2048M -XX:MaxPermSize=2048M -XX:+CMSClassUnloadingEnabled</argLine>
+                    <argLine>-Xms512M -Xmx1024M -XX:+CMSClassUnloadingEnabled</argLine>
                 </configuration>
                 <executions>
                     <execution>
@@ -553,7 +559,6 @@
                         <param>${main.basedir}/dev/codecheck/license-mappings.xml</param>
                     </licenseMapping>
                 </configuration>
-
             </plugin>
         </plugins>
     </build>
